# JavaRelated

./: .gitignore  .gitmodules  README.md
29Items-Projects/3Python/1E-Commerce-Platform-GLM/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
29Items-Projects/3Python/1E-Commerce-Platform-GLM/.github/workflows/: ci.yml  deploy-dev.yml  deploy-production.yml
29Items-Projects/3Python/1E-Commerce-Platform-GLM/backend/: main.py  manage.py  requirements.txt  urls.py  wsgi.py
29Items-Projects/3Python/1E-Commerce-Platform-GLM/backend/api/: __init__.py  apps.py  exceptions.py  pagination.py  permissions.py  serializers.py  urls.py
29Items-Projects/3Python/1E-Commerce-Platform-GLM/backend/core/: __init__.py  admin.py  apps.py
29Items-Projects/3Python/1E-Commerce-Platform-GLM/backend/tasks/: __init__.py  cleanup_tasks.py  email_tasks.py  inventory_tasks.py  order_tasks.py  payment_tasks.py  recommendation_tasks.py  search_tasks.py
29Items-Projects/3Python/1E-Commerce-Platform-GLM/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
29Items-Projects/3Python/1E-Commerce-Platform-GLM/docs/: ARCHITECTURE.md  PROJECT-PLAN.md  TECH-NOTES.md
29Items-Projects/3Python/1E-Commerce-Platform-GLM/infrastructure/terraform/: main.tf  outputs.tf  variables.tf
29Items-Projects/3Python/1E-Commerce-Platform-GLM/tests/: conftest.py
29Items-Projects/3Python/1E-Commerce-Platform-GLM/tests/e2e/: test_user_journeys.py
29Items-Projects/3Python/1E-Commerce-Platform-GLM/tests/fixtures/: user_fixtures.py
29Items-Projects/3Python/1E-Commerce-Platform-GLM/tests/integration/: test_api_integration.py
29Items-Projects/3Python/3Rest-Api-Microservice/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
29Items-Projects/3Python/3Rest-Api-Microservice/.github/workflows/: ci.yml  deploy.yml
29Items-Projects/3Python/3Rest-Api-Microservice/app/: __init__.py  config.py  extensions.py
29Items-Projects/3Python/3Rest-Api-Microservice/app/api/: __init__.py  analytics.py  customers.py  nlp.py  search.py
29Items-Projects/3Python/3Rest-Api-Microservice/app/schemas/: __init__.py  common.py  customer_schema.py
29Items-Projects/3Python/3Rest-Api-Microservice/app/services/: __init__.py  analytics_service.py  customer_service.py  nlp_service.py  search_service.py
29Items-Projects/3Python/3Rest-Api-Microservice/app/templates/: base.html  index.html
29Items-Projects/3Python/3Rest-Api-Microservice/app/utils/: __init__.py  decorators.py  exceptions.py  validators.py
29Items-Projects/3Python/3Rest-Api-Microservice/docs/: ARCHITECTURE.md  PROJECT-PLAN.md  TECH-NOTES.md
29Items-Projects/3Python/3Rest-Api-Microservice/scripts/: init.sql  run_migrations.py  seed_db.py
29Items-Projects/3Python/3Rest-Api-Microservice/tests/: __init__.py  conftest.py
29Items-Projects/3Python/3Rest-Api-Microservice/tests/integration/: __init__.py  test_customer_api.py  test_search_api.py
29Items-Projects/3Python/3Rest-Api-Microservice/tests/unit/: __init__.py  test_customer_service.py  test_nlp_service.py  test_search_service.py  test_validators.py
29Poss-Projects/: !29_TOPICS_prompt.md  (+51 more)
(+9151 files in other folders)
